fixed button spacing + tried fixing top bar text

--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ body {
     background-color: gainsboro;
 }
 
-.top_bar a {
+.top_bar h3 {
     float: left;
     display: block;
     color: gainsboro;
     text-align: center;
-    padding: 20px 20px;
+    padding: 5px 20px 5px 20px;
     text-decoration: none;
     font-family: 'Handlee', cursive;
     size: 20px;
@@ -38,7 +38,7 @@ body {
 #analyzeButton {
     color:green;
     background-color: white;
-    margin-right: 30px;
+    /* margin-right: 30px; */
 }
 
 #analyzeButton:hover {
@@ -49,7 +49,8 @@ body {
 #resetButton {
     color: red;
     background-color: white;
-    margin-right: 30px;
+    /* margin-right: 30px; */
+    margin-left: 100px;
 }
 
 #resetButton:hover {
@@ -61,7 +62,8 @@ body {
     color: blue;
     background-color: white;
     position: absolute;
-    margin-right: 30px;
+    /* margin-right: 30px; */
+    margin-left: 100px;
 }
 
 #uploadButton:hover {
@@ -73,7 +75,7 @@ body {
     display: flex;
     margin-left: 15px;
     width: 80%;
-    margin-top: 60px;
+    margin-top: 65px;
 }
 
 .box, .secondBox {
